# FuryStudio

./: .gitattributes  .gitignore  .gitmodules  FuryStudio.sln  README.md  linux.slnf
.github/workflows/: build-and-test.yml
AvaloniaUI/: App.axaml  App.axaml.cs  AvaloniaUI.csproj  MainMenuWindow.axaml  MainMenuWindow.axaml.cs  Program.cs  ProjectTemplateWizardSelectorWindow.axaml  ProjectTemplateWizardSelectorWindow.axaml.cs
AvaloniaUI/Converters/: BitmapAssetValueConverter.cs  BooleanToStringValueConverter.cs
AvaloniaUI/Project/: NewProjectWindow.axaml  NewProjectWindow.axaml.cs
AvaloniaUI/Styles/: MainStyles.xaml
AvaloniaUI/Wizard/: Wizard.axaml  Wizard.axaml.cs
CS_Samples/: CS_Samples.csproj  Program.cs  TestHelpers.cs  bin_convert.cs  bin_create.cs  bmp2imm.cs  dat_create.cs  dat_read.cs  imm2bmp.cs  lbm2bmp.cs
CSharp_Tests/: CSharp_Tests.csproj
Core/: Core.csproj  Notes.txt
Core.Interfaces/Configuration/: IConfiguration.cs  IGlobalConfiguration.cs  IGlobalConfigurationContainer.cs  IPlatformInfo.cs
Core.Interfaces/Infrastructure/: IApplication.cs  IDirectorySearch.cs  IFileReadStream.cs  IFileStreamLocator.cs  IFileWriteStream.cs  IObjectSerializer.cs  ISerializer.cs  IZipArchive.cs
Core.Interfaces/Projects/: IProject.cs  IProjectItem.cs
Core.Interfaces/Sessions/: ISession.cs  ISessionManager.cs
Core.Interfaces/Templates/: GameArchitecture.cs  GameOptions.cs  GameType.cs  ITemplate.cs
Core.Tests/: Core.Tests.csproj  Utils.cs
Core.Tests/Infrastructure/: FileReadStream_Tests.cs  FileWriteStream_Tests.cs  YamlSerializer_Tests.cs  ZipArchive_Tests.cs
Core.Tests/UtilsDotNet/: Bmp_Tests.cs  Dat_Tests.cs  Exception_Tests.cs  Utils.cs
Core/Configuration/: Configuration.cs  GlobalConfiguration.cs  GlobalConfigurationContainer.cs  InternalConfiguration.cs  PlatformInfo.cs  PlatformInfo_Linux.cs  PlatformInfo_Win.cs
Core/Infrastructure/: Application.cs  DirectorySearch.cs  FileReadStream.cs  FileStreamLocator.cs  FileWriteStream.cs  YamlSerializer.cs  ZipArchive.cs
Core/Projects/: Project.cs  ProjectItem.cs
Core/Properties/: AssemblyInfo.cs
Core/Sessions/: Session.cs  SessionManager.cs
Core/Templates/: InternalTemplate.cs  Template.cs
FuryPaint/: FuryPaint.csproj  MainForm.Designer.cs  MainForm.cs  MainForm.resx  PaletteControl.Designer.cs  PaletteControl.cs  Program.cs  README.md  ScrollPanel.cs
FuryPaint/Classes/: CanvasStatus.cs  ClipboardData.cs  ImageContainer.cs  PaintSet.cs  Undo.cs  UndoList.cs
FuryPaint/Components/: CanvasPanel.Designer.cs  CanvasPanel.cs  CanvasPanel_Clipboard.cs  (+10 more)
FuryStudio/: DummyPagePresenter.cs  DummyPageView.Designer.cs  DummyPageView.cs  Form1.Designer.cs  Form1.cs  FuryStudio.csproj  Program.cs
Interfaces/: Interfaces.csproj
Plugins/: Plugins.csproj
Resources/: ResourceStreams.cs  Resources.csproj
Services/: Services.csproj
Tests/: TestHelpers.cs  Tests.csproj
Tests.Core/: Tests.Core.csproj
Tests.Utils/: Bin_Tests.cs  Bmp_Tests.cs  Dat_Tests.cs  Exception_Tests.cs  Lbm_Tests.cs  Tests.Utils.csproj  Version_Tests.cs
Tests.ViewModels/: Tests.ViewModels.csproj
UI/: UI.csproj
UnitTests/: UnitTests.csproj
Utils/C_Tests/: Bin_Tests.cpp  Bmp_Tests.cpp  CMakeLists.txt  Dat_Tests.cpp  Lbm_Tests.cpp  Version_Tests.cpp  Wrappers.c  pch.h  utils.cpp  utils.hpp  wrappers.h
Utils/Cpp_LibTests/: Bin_Tests.cpp  Bmp2Imm_Tests.cpp  Bmp2Lbm_Tests.cpp  Bmp_Tests.cpp  CMakeLists.txt  Dat_Tests.cpp  Imm2Bmp_Tests.cpp  Lbm2Bmp_Tests.cpp  Lbm_Tests.cpp  Version_Tests.cpp  catchmain.cpp  utils.cpp
Utils/Cpp_Tests/: Bin_Tests.cpp  Bmp2Imm_Tests.cpp  Bmp2Lbm_Tests.cpp  Bmp_Tests.cpp  CMakeLists.txt  Dat_Tests.cpp  Imm2Bmp_Tests.cpp  Lbm2Bmp_Tests.cpp  Lbm_Tests.cpp  Version_Tests.cpp  catchmain.cpp  utils.hpp
Utils/FuryUtils/: Bin.cpp  BinaryIO.cpp  Bmp.cpp  CMakeLists.txt  Exceptions.cpp  FuryUtils.def  Lbm.cpp  Version.cpp  bin_c.c  bmp_c.c  dat_c.c  dllmain.cpp  exceptions_c.c  framework.h  imm_c.c  lbm_c.c  version_c.c
UtilsDotNet/: Bin.cs  Bmp.cs  Constants.cs  Dat.cs  ErrorCodes.cs  FuryException.cs  Imm.cs  Lbm.cs  Utils.csproj  Version.cs
ViewModels/: MainFormViewModel.cs  ViewModels.csproj
ViewModels.Interfaces/: ViewModels.Interfaces.csproj
WinUI/: MainMenuForm.Designer.cs  MainMenuForm.cs  MenuDataSource.cs  Program.cs  WinUI.csproj
doc/: build.md  c_samples.md  changelog.md  cs_samples.md  datfile.md  index.md  schema
testassets/: 1bpp.lbm  BAD1.yml  BAD2.yml  BAD3.yml  BASIC.yml  badorder.lbm  badsig.lbm  bigchunk.lbm  bigpal.lbm  contents.md  full8out.pam  invalidbmhd.lbm  mask.lbm  overflow.lbm  pal4.lbm  pal4c.lbm  pal4narrow.lbm  pal4nc.lbm  pal4out.lbm  pal8.lbm  pal8c.lbm  pal8out.lbm  pal8qnt.lbm  palmismatch.lbm  sizemismatch.lbm  tooshort.lbm
(+329 files in other folders)
